# pomme-server

./: .env  Cargo.toml
migrations/: 20240829093149_users.sql  20240829100514_chats.sql  20240829101345_chat_participants.sql
queries/: insert_chat.sql  insert_chat_participant.sql  insert_user.sql  null_chat_name_replacement.sql  query_chat_by_id.sql  query_chat_by_search.sql  query_chat_participants_of_chat.sql  query_user_by_id.sql  query_user_by_search.sql
src/: error.rs  main.rs  schema.rs
src/api/: v1.rs
src/api/v1/: chat.rs  chat_participant.rs  user.rs
src/schema/: chat.rs  chat_participant.rs  database.rs  state.rs  user.rs
src/schema/database/: chat.rs  chat_participant.rs  user.rs
src/schema/state/: builder.rs
