[package]
name = "pomme-server"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = "0.7.5"
dotenvy = "0.15.7"
serde = { version = "1.0.209", features = ["derive"] }
sqlx = { version = "0.8.1", features = ["runtime-tokio", "tls-rustls", "postgres", "time"] }
time = { version = "0.3.36", features = ["formatting", "serde"] }
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }
